- using (thanks to UIOP) XDG Base Directory for user dat (data, config   and cache); - create default preference files if does not exists.

--- a/src/config.lisp.in.in
+++ b/src/config.lisp.in.in
@@ -20,8 +20,7 @@
 
 (define-constant +gv-bin+     "@GV@"  :test #'string=)
 
-(define-constant +home-data-dir+ (concatenate 'string
-                                              "." +program-name+ "/")
+(define-constant +home-data-dir+ (concatenate 'string +program-name+ "/")
   :test #'string=)
 
 (defun _ (a)
