- added procedures to manage countries; - added a button, when  a movie is added, to try  to apply changes and   close window regardless of the results; - updated italian translation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,6 +59,7 @@ data/icons/dvd-in-case.png                       \
 data/icons/barcode.png                           \
 data/icons/details.png                           \
 data/icons/go-to-copy.png                        \
+data/icons/world.png                             \
 data/font.afm                                    \
 data/countries.csv
 
