--- a/Makefile.in
+++ b/Makefile.in
@@ -414,6 +414,7 @@ data/icons/dvd-in-case.png                       \
 data/icons/barcode.png                           \
 data/icons/details.png                           \
 data/icons/go-to-copy.png                        \
+data/icons/world.png                             \
 data/font.afm                                    \
 data/countries.csv
 
