- added feature: download movie from url.

--- a/Makefile.in
+++ b/Makefile.in
@@ -410,6 +410,7 @@ data/icons/fulci-icon.png                        \
 data/icons/goto-wiki.png                         \
 data/icons/wiki-fetch-image.png                  \
 data/icons/wiki-fetch-data.png                   \
+data/icons/www-fetch-image.png                   \
 data/icons/dvd-in-case.png                       \
 data/icons/barcode.png                           \
 data/icons/details.png                           \
