- updated   file's  list   that   contains  strings   that  could   be   internationalized; - updated italian translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,13 +1,25 @@
 # List of source files which contain translatable strings.
-src/main.lisp
-src/search-frame.lisp
-src/main-frame.lisp
-src/main-toolbar.lisp
-src/menu-commands.lisp
-src/nodgui-utils.lisp
-src/manage-movie.lisp
-src/manage-copies.lisp
-src/search-copies-frame.lisp
-src/preferences.lisp
-src/import-tsv.lisp
 src/db.lisp
+src/db-utils.lisp
+src/filesystem-utils.lisp
+src/icons.lisp
+src/image-utils.lisp
+src/import-tsv.lisp
+src/main-frame.lisp
+src/main.lisp
+src/main-toolbar.lisp
+src/manage-copies.lisp
+src/manage-movie.lisp
+src/menu-commands.lisp
+src/misc-utils.lisp
+src/net-utils.lisp
+src/nodgui-utils.lisp
+src/preferences.lisp
+src/ps-utils.lisp
+src/search-copies-frame.lisp
+src/search-copy-expr.lisp
+src/search-title-expr.lisp
+src/search-titles-frame.lisp
+src/text-utils.lisp
+src/validation.lisp
+src/wikipedia.lisp
