--- a/quick_quicklisp.sh.in
+++ b/quick_quicklisp.sh.in
@@ -94,6 +94,7 @@ install_dependency () {
     #  --eval "(sb-ext:quit)";             <- keep this line as latest
     @LISP_COMPILER@        \
      --eval "(ql:quickload \"alexandria\")"       \
+     --eval "(ql:quickload \"access\")"           \
      --eval "(ql:quickload \"cl-ppcre\")"         \
      --eval "(ql:quickload \"cl-syntax\")"        \
      --eval "(ql:quickload \"lquery\")"           \
